# science-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  deploy.sh  index.html  issues.md  pyproject.toml
.codegraph/: config.json  (+1 more)
extensions/science-electrochem/: README.md  pyproject.toml
extensions/science-electrochem/src/science_electrochem/: __init__.py  ca.py  cv.py  eis.py  models.py
extensions/science-iv/: README.md  pyproject.toml
extensions/science-iv/src/science_iv/: __init__.py  analyze.py  models.py
extensions/science-memristor/: PLAN.md  README.md  pyproject.toml
extensions/science-memristor/src/science_memristor/: __init__.py  dashboard.py  device.py  device_cli.py  endurance.py  plotting.py  retention.py  switching.py
extensions/science-memristor/tests/: test_device.py
science-cli/: AGENTS.md  CHANGELOG.md  LICENSE  MIGRATION.md  PLAN-REPL.md  PLAN-update.md  PLAN.md  README.md  pyproject.toml  requirements.txt  ruff.toml  test_guardrails.py
science-cli/.github/workflows/: ci.yml
science-cli/documentation/plans/: PLAN-command-restructure.md  PLAN-config-expansion.md  PLAN-consolidate-devices-yaml.md  PLAN-dashboard-redesign.md  PLAN-enhanced-dashboard.md  PLAN-extension-interface.md  PLAN-plotly-dashboard.md  PLAN-science-cli-2.0.0.md  PLAN-tui-output-format.md  PLAN-version-bump.md  test-report-enhanced-dashboard.md
science-cli/documentation/test-reports/: TEST-REPORT-2026-05-13.md  TEST-REPORT-2026-05-17.md  TEST-REPORT-sprint-8.md
science-cli/scripts/: generate-iv-directional-preview.py
science-cli/src/: __main__.py
science-cli/src/science_cli/: __init__.py  app.py  extensions.py  repl.py
science-cli/src/science_cli/cli/: help.py
science-cli/src/science_cli/cli/commands/: __init__.py  add.py  analyze.py  close.py  config.py  data.py  data_cmd.py  delete_cmd.py  edit.py  edit_cmd.py  eis.py  ext.py  extensions.py  general.py  image.py  ls.py  ls_cmd.py  memristor_cmd.py  metadata.py  open.py  open_cmd.py  parse.py  plot.py  project.py  results.py  status.py  techniques.py
science-cli/src/science_cli/commands/: __init__.py  image.py
science-cli/src/science_cli/core/: README.md  config.py  data_loader.py  file_utils.py  fzf_utils.py  legacy.py  manifest.py  parquet_store.py  paths.py  project.py  protocol.py  session.py  sweep_metadata.py  technique.py
science-cli/src/science_cli/electrochem/: __init__.py  ca.py
science-cli/src/science_cli/functions/: __init__.py  file_browser.py  metadata_utils.py  name_parser.py  protocol_helpers.py
science-cli/src/science_cli/iv/: __init__.py  analyze.py  models.py
science-cli/src/science_cli/memristor/: README.md  __init__.py  dashboard.py  db.py  device.py  device_cli.py  endurance.py  plotting.py  retention.py  switching.py
science-cli/src/science_cli/plot/: README.md  base.py  eis.py  eis_circuits.py  overlays.py
science-cli/src/science_cli/theme/: README.md  __init__.py
science-cli/src/science_cli/theme/templates/: ec-cv.yaml  iv-sweep.yaml
science-cli/src/science_cli/theme/themes/: publication-acs.yaml  publication-nature.yaml  tufte.yaml
science-cli/src/science_cli/tui/: __init__.py  app.py  banner.py  header.py  input_bar.py  output_panel.py  theme.py
science-cli/test-demo/: generate_fake_data.py
science-cli/test-demo/protocol/demo-protocol/: devices.yaml
science-cli/test-demo/protocol/demo-protocol/1_iv-measurements/: 0101_PDA_r0c0_iv_reset_01.csv  0101_PDA_r0c0_iv_reset_02.csv  0101_PDA_r0c0_iv_reset_03.csv  0101_PDA_r0c0_iv_set_01.csv  0101_PDA_r0c0_iv_set_02.csv  0101_PDA_r0c0_iv_set_03.csv  0101_PDA_r0c1_iv_reset_01.csv  0101_PDA_r0c1_iv_reset_02.csv  0101_PDA_r0c1_iv_reset_03.csv  0101_PDA_r0c1_iv_set_01.csv  0101_PDA_r0c1_iv_set_02.csv  0101_PDA_r0c1_iv_set_03.csv  0101_PDA_r1c0_iv_reset_01.csv  0101_PDA_r1c0_iv_reset_02.csv  0101_PDA_r1c0_iv_reset_03.csv  0101_PDA_r1c0_iv_set_01.csv  0101_PDA_r1c0_iv_set_02.csv  0101_PDA_r1c0_iv_set_03.csv  0101_PDA_r1c1_iv_reset_01.csv  0101_PDA_r1c1_iv_reset_02.csv  0101_PDA_r1c1_iv_reset_03.csv  0101_PDA_r1c1_iv_set_01.csv  0101_PDA_r1c1_iv_set_02.csv  0101_PDA_r1c1_iv_set_03.csv  0101_PDAc_r0c0_iv_reset_01.csv  0101_PDAc_r0c0_iv_reset_02.csv  0101_PDAc_r0c0_iv_reset_03.csv  (+21 more)
science-cli/tests/: conftest.py
science-cli/tests/test_core/: test_config.py  test_session.py  test_technique.py
science-cli/tests/test_memristor/: test_db.py
science-cli/theme-previews/custom/: iv_preview.py
(+240 files in other folders)
