[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "science-cli"
version = "2.7.0"
description = "Scientific data analysis CLI — CV, CA, EIS, plotting, fitting, protocol management"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "scipy>=1.7",
    "lmfit>=1.0",
    "pyyaml>=5.4",
    "rich>=12.0",
    "prompt_toolkit>=3.0",
    "questionary>=1.10",
    "plotly>=5.0",
    "textual>=0.40",
    "pyarrow>=10.0",
]

[project.scripts]
sci = "science_cli.app:run_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"science_cli.theme.themes" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests", "."]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.coverage.run]
source = ["src/science_cli"]
omit = ["*/__pycache__/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:"]
