[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "science-cli"
version = "7.0.0"
description = "Scientific data analysis CLI — CV, CA, EIS, plotting, fitting, protocol management"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "scipy>=1.7",
    "lmfit>=1.0",
    "pyyaml>=5.4",
    "rich>=12.0",
    "prompt_toolkit>=3.0",
    "questionary>=1.10",
]

[project.scripts]
sci = "science_cli.app:run_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"science_cli.theme.themes" = ["*.yaml"]
