[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "science-memristor"
version = "0.1.0"
description = "Memristor characterization plugin for science-cli — endurance, retention, switching"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "lmfit>=1.0",
    "matplotlib>=3.5",
    "science-iv>=0.1.0",
]

[project.scripts]
mem-device = "science_memristor.device_cli:main"

[project.entry-points."science_cli.extensions"]
science-memristor = "science_memristor:register"

[tool.setuptools.packages.find]
where = ["src"]
